--- a/Data-Science/Copa/copa.ipynb
+++ b/Data-Science/Copa/copa.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con 'PYTHON-PROYECTS (Python 3.12.2)' requiere el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'c:/Users/Yoyobastidas/Desktop/ig2/PYTHON-PROYECTS/PYTHON-PROYECTS/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from string import ascii_uppercase as alfabeto\n",
@@ -13,9 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mLa ejecución de celdas con 'PYTHON-PROYECTS (Python 3.12.2)' requiere el paquete ipykernel.\n",
+      "\u001b[1;31mEjecute el siguiente comando para instalar 'ipykernel' en el entorno de Python. comando \n",
+      "\u001b[1;31m: 'c:/Users/Yoyobastidas/Desktop/ig2/PYTHON-PROYECTS/PYTHON-PROYECTS/Scripts/python.exe -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "todas_tablas = pd.read_html('https://en.wikipedia.org/wiki/2014_FIFA_World_Cup')"
    ]
